--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1 class="hone">Welcome to Simple Dictionary</h1>
         <div class="pone-holder">
         <p class="pone">Welcome to Simple Dictionary &copy. Its a simple and easy to use Dictionary, it currently is under <a href="https://itzankan-in.github.io" target="_blank">itzankan-in.github.io</a>. It is actively managed by me, Ankan.
-            you want to check my other projects, you should pay a visit to my <a href="https://github.com/itzankan-in" target="_blank">github porfile </a>:D.
+           If you want to check my other projects, you should pay a visit to my <a href="https://github.com/itzankan-in" target="_blank">github porfile </a>:D.
         </p></div>
         <br>
   
